[package]
name = "lc3_vm"
version = "0.1.0"
authors = ["Kuldeep Sinh Chauhan <chauhan.kuldeep.sinh@gmail.com>"]
edition = "2018"
description = "LC-3 (Little Computer 3) VM implemented in Rust. Ideally, it will run any LC-3 assembly program."
license = "Apache-2.0"
license-file = "LICENSE"
documentation = "https://github.com/KuldeepSinh/lc3_vm"
homepage = "https://github.com/KuldeepSinh/lc3_vm"
repository = "https://github.com/KuldeepSinh/lc3_vm"
readme = "README.md"
keywords = ["lc3", "vm"]

[dependencies]
signal-hook = "0.1.6"
termios = "0.3.1"
byteorder = "1.2.7"
libc = "0.2.45"